Add the firebase signin and signup

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">DAM-TP_1</string>
+    <string name="default_web_client_id">654129329823-3li42j453flqrehiqo3vinted5r7jho5.apps.googleusercontent.com</string>
 </resources>
